fixed the spacing

--- a/client/style.css
+++ b/client/style.css
@@ -138,7 +138,7 @@ button {
 }
 
 #black-keys .spacer {
-  width: 45px;
+  width: 53.5px;
 }
 
 #controls {
